@@ -1,4 +1,4 @@
 Tests finished. 1 test of 1 passed.
-Compiled as RELEASE
-Test suite pass at GMT Tue Apr  3 20:04:39 2012
+Compiled as DEBUG
+Test suite pass at GMT Mon Apr 16 16:38:07 2012
 
